# farm-archive

./: Cargo.toml  README.md  prompts.csv
src/: main.rs
src/config/: app.rs  database.rs  seed.rs
src/handlers/: auth.rs  chemical.rs  harvest.rs  home.rs  mod.rs  planting.rs  traceability.rs
src/middleware/: auth.rs
src/models/: chemical.rs  harvest.rs  mod.rs  planting.rs  traceability.rs  user.rs
src/services/: chemical_service.rs  harvest_service.rs  mod.rs  planting_service.rs  traceability_service.rs  user_service.rs
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
templates/auth/: login.html  register.html
templates/chemicals/: create.html  detail.html  list.html
templates/dashboard/: overview.html
templates/harvests/: create.html  detail.html  list.html
templates/partials/: footer.html  header.html
templates/plantings/: create.html  detail.html  edit.html  list.html
templates/traceability/: detail.html  list.html  query.html
